# BOM-AI-Hackathon

./: README.md
sources/: kanker.nl.md  nkr-cijfers.nl.md
teams/2_Pentabody/: README.md
teams/2_Pentabody/Persona_templates/: cancer_matcher.md  conversation_field_extractor.md  summary_maker.md
teams/2_Pentabody/app/: .env.example  .gitignore  README.md  pyproject.toml  streamlit_app.py
teams/2_Pentabody/app/src/parser/: parse_kanker_nl.py  parse_nkr_cijfers.py
teams/2_Pentabody/app/src/pentabody_chatbot/: __init__.py  config.py  openai_client.py  orchestrator.py  prompts.py  routing.py  schemas.py
teams/2_Pentabody/app/tests/: test_openai_client.py  test_orchestrator.py  test_parse_kanker_nl.py  test_parse_nkr_cijfers.py  test_routing.py  test_schemas.py
teams/2_Petabody/: README.me
